[package]
name = "wav-to-flac"
description = "CLI tool to convert WAV files to FLAC"
version = "0.1.0"
authors = ["Pierre Dal-Pra <dalpra.pierre@gmail.com>"]
categories = ["cli"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow            = "1.0.34"
executors         = "0.8.0"
flac-bound        = "0.2.0"
hound             = "3.4.0"
audiotags         = "0.2.7182"
indicatif         = "0.15.0"
log               = "0.4.11"
num_cpus          = "1.13.0"
pathdiff          = "0.2.0"
pretty_env_logger = "0.4.0"
structopt         = "0.3.20"
walkdir           = "2.3.1"
